# gdynia-thermal-db

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
config/: config.yaml  logging.yaml
docs/: admin_units.md  data_sources.md  database_design.md  limitations.md  methodology.md  phase2_outlook.md
notebooks/: 01_viewer_audit.ipynb  02_download_buildings.ipynb  03_admin_units.ipynb  04_thermal_tiles_inventory.ipynb  05_database_build.ipynb  06_district_metrics.ipynb
src/gdynia_thermal_db/: __init__.py  logging_utils.py  settings.py
src/gdynia_thermal_db/admin_units/: __init__.py
src/gdynia_thermal_db/audit/: __init__.py  configs.py  scenes.py  viewer_inventory.py
src/gdynia_thermal_db/database/: __init__.py
src/gdynia_thermal_db/download/: __init__.py  admin_units.py  buildings.py  fetch.py  thermal_tiles.py  viewer_assets.py
src/gdynia_thermal_db/indicators/: __init__.py
src/gdynia_thermal_db/raster/: __init__.py
src/gdynia_thermal_db/utils/: __init__.py  hashing.py  io.py  paths.py  urls.py
src/gdynia_thermal_db/vector/: __init__.py
